# zhvusha-showcase

./: .env.example  .gitignore  .importlinter  .mcp.json  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: quality.yml
alembic/: env.py
alembic/versions/: 001_add_episodes_table.py  002_add_knowledge_tables.py  003_add_audit_log.py  004_add_pending_actions.py  005_audit_log_jsonb.py  006_add_news_pipeline_tables.py  007_add_archive_nodes.py
docs/: architecture.md  public-scope.md
scripts/: append_self_coding_audit.sh  check_self_coding_mvp.py  check_tests_for_commit.sh  check_tier3_protection.sh  check_whitelist.sh  codex_architecture_gate.py  generate_channel_visual_card.py  generate_telegram_mcp_session.py  migrate_knowledge_files.py  prepare_daivinchik_visual_review.py  rollback_reactions.py  run_daivinchik_taste_profile.py  run_hermes_baseline.py  run_telegram_mcp.py  self_coding_test_gate.sh  smoke_correction_handler.py  smoke_enricher.py  smoke_enrichment_db.py  smoke_learning_signal.py  smoke_staging_review.py  smoke_staging_writer.py  vscode_chat.py
src/: __main__.py
src/agency/: __init__.py  agent_runtime_bridge.py  intent_builder.py  judgement.py  models.py  permissions.py  policy.py  rendering.py  runner.py  social_gate.py  store.py
src/agent_runtime/: AGENTS.md  __init__.py  approvals.py  bridge.py  browser_artifacts.py  budget_policy.py  builtin_tools.py  capability_graph.py  computer_use.py  context.py  desktop_control.py  digital_scenario_coverage.py  digital_scenarios.py  events.py  image_artifacts.py  memory.py  models.py  profiles.py  registry.py  rendering.py  retrieval.py  routing.py  runtime.py  self_work_context.py  storage.py  telegram_inbound.py  tools.py  topic_signals.py  voice_gateway.py
src/archive/: __init__.py  files.py  models.py  store.py
src/bot/: AGENTS.md  __main__.py  delivery.py  main.py  maintenance_guard.py  telegram_client.py  utils.py
src/collectors/: __init__.py  arxiv.py  base.py  browser.py  git.py  github_trending.py  huggingface.py  lmarena.py  rss.py  source_items.py  telegram_channels.py  youtube.py
src/core/: capabilities.py  config.py  decision.py  file_access.py  mode_config.py  pipeline.py  process_guard.py
src/daemon/: __init__.py  __main__.py  agent_runtime_requester.py  audit.py  decision.py  main.py  pending_action.py  safety.py  signals.py  sleep_agent.py  stream.py  ticker.py
src/dialogue/: __init__.py  decisions.py  people.py  state.py  updater.py
src/embeddings/: __init__.py  service.py
src/interfaces/: __init__.py  vscode_chat.py
src/knowledge/: __init__.py  manager.py  models.py  protocols.py  store.py  summarization.py
src/life_runtime/: __init__.py  agent_runtime_bridge.py  attention.py  drives.py  models.py  runner.py  safety.py  store.py
src/llm/: __init__.py  anthropic_api.py  base.py  claude_cli.py  cli_images.py  codex_cli.py  gemini.py  openai_compatible.py  openai_images.py  openrouter.py  protocols.py  (+2 more)
tests/: conftest.py  test_affective_state.py  test_album_collector.py  test_architecture_audit.py  test_autonomous_self_coding_config.py  test_autonomous_self_coding_runtime_guard_config.py  test_base_skill.py  test_bot.py  test_bot_commands.py  test_bot_pending_filter.py  test_browser_collector.py  test_capabilities.py  test_channel_archive.py  test_channel_visual_capabilities.py  test_channel_visual_config.py  test_chat_logger.py  test_chat_response_capabilities_hidden.py  test_chat_response_enrichment.py  test_chat_response_identity_gate.py  test_chat_response_learning_gate.py  test_chat_response_prompt_hygiene.py  test_chat_response_public_contact.py  test_chat_response_services_gate.py  test_chat_tools.py  test_codex_architecture_gate.py  test_codex_limits.py  test_collector_base.py  test_collectors_status.py  test_config.py  test_consolidation.py  test_consolidation_lock.py  test_consolidation_staging_review.py  test_context_loader.py  test_context_loader_public.py  test_daemon_approval.py  test_daemon_audit.py  test_daemon_decision.py  test_daemon_main.py  test_daemon_producers.py  test_daemon_safety.py  (+78 more)
(+450 files in other folders)
