[project]
name = "zhvusha"
version = "0.1.0"
description = "Personal AI agent with persistent memory and self-expanding skills"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "alembic>=1.14",
    "numpy>=1.26",
    "anthropic>=0.42",
    "youtube-transcript-api>=0.6",
    "youtube-search-python>=1.6",
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "ruff>=0.9",
    "pre-commit>=4.0",
    "hypothesis>=6.0",
    "import-linter>=2.0",
    "types-PyYAML>=6.0",
]
full = [
    "sentence-transformers>=3.0",
    "google-genai>=1.0",
    "browser-use>=0.2",
    "kwork>=0.2.0",
    "redis[hiredis]>=5.0",
    "Telethon>=1.38",
    "cryptg>=0.4",
    "apscheduler>=3.10",
    "watchdog>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- Ruff ---
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "DTZ",
    "T20", "SIM", "TCH", "ARG", "PTH", "ERA", "RUF",
    "S",      # flake8-bandit security rules
    "C90",    # mccabe complexity
]
ignore = ["E501", "S101", "RUF001"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/agent_runtime/workers/telegram_mcp.py" = ["I001"]
"tests/agent_runtime/test_telegram_mcp_worker.py" = ["I001"]
"tests/scripts/test_run_telegram_mcp.py" = ["I001"]
"tests/**/*.py" = ["S101", "S105", "S106", "ARG", "PLR2004", "A002", "TC003"]
"src/memory/types.py" = ["A005"]
"src/skills/**/skill.py" = ["ARG002"]
"src/core/pipeline.py" = ["ARG002"]
"src/memory/importance.py" = ["ARG002"]
"src/memory/episodic.py" = ["ARG002"]
"src/scripts/**/*.py" = ["T201"]
"scripts/**/*.py" = ["T201", "RUF002"]
"src/personality/*.py" = ["ARG002"]
"src/core/decision.py" = ["ARG002"]
"src/collectors/*.py" = ["ARG002", "S603"]
"src/daemon/**/*.py" = ["ARG002"]
# Phase 13 — implement_spec drives git via subprocess; literal args.
"src/skills/implement_spec/branch_manager.py" = ["S603"]
"src/skills/implement_spec/commit_runner.py" = ["S603"]
"src/mcp_server/*.py" = ["ARG002"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# --- Mypy ---
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
show_error_codes = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "browser_use.*",
    "sentence_transformers.*",
    "google",
    "google.*",
    "kwork",
    "kwork.*",
    "redis",
    "redis.*",
    "pgvector.*",
    "asyncpg.*",
    "youtube_transcript_api.*",
    "youtubesearchpython.*",
    "telethon.*",
    "cryptg.*",
    "mcp.*",
    "apscheduler.*",
    "watchdog.*",
    "cdp_use.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.daemon.producers.filesystem"
disable_error_code = ["misc"]

# --- Pytest ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=80"
markers = [
    "contract: contract tests (level 1) — verify module conforms to its protocol",
    "chain: chain tests (level 2) — verify pipelines don't crash",
    "integration: deep integration tests (level 3) — verify expected output",
    "e2e: end-to-end tests (level 4) — full system through real interfaces",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "if __name__",
    "asyncio\\.run",
]
omit = [
    "src/__main__.py",
]
